--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -2,11 +2,43 @@
 
 This work is under review at xxxxxxxxx and is on the preprint server MedRXiV [@Goudswaard2021.05.19.21257443]. I performed all analyses, created all figures and tables and wrote the manuscript. 
 
+## Background
+
+Obesity (body mass index ≥ 30 kg/m^2^) has nearly tripled worldwide in the last 45 years [@Bluher2019]. This is a major health concern as a higher body mass index (BMI) is an important risk factor for various noncommunicable disorders, including cardiovascular disease [@Bhaskaran2018a]. Clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders, including coronary heart disease and stroke 4-6 [@Nordestgaard2012; @Dale2017; @Wolk2003a]. 
+
+Platelets are blood cells which are essential for the cessation of bleeding upon injury to a blood vessel and are involved in thrombosis and progression of cardiovascular disease [@Koupenova2017a]. When pathologically activated, platelets can aggregate to form thrombi thereby occluding arteries and triggering a myocardial infarction or stroke [@Koupenova2017a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis [@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets [@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Mechanisms of platelet hyperactivity are unclear, but it is possible that changes in platelet numbers, size and immaturity may play a role. Furthermore, an alteration in circulating metabolites or proteins induced by obesity could modulate the activation of platelets [@Goudswaard2021].
+
+Platelet function can be directly assessed by various methods; these methods commonly include platelet aggregation experiments and/or using antibodies to detect platelet receptors that are expressed upon activation. One of the limitations of measuring platelet function directly is that these techniques are not widely available or readily standardized. Haematology analyzers are more commonly used to provide full blood counts, providing detailed readouts of platelet characteristics. Some of these characteristics have been reported to be indirect measures of platelet function [@Wurtz2012]. For example, an increase in mean platelet volume (MPV) has been reported to be predictive of vascular mortality and ischaemic heart disease [@Slavka2011]. Another commonly measured platelet characteristic is the number of platelets in circulation (platelet count, PLT). An increase in platelet count has been reported to be associated with platelet hyperactivity [@Wurtz2012] and there is evidence that higher platelet count is associated with ischaemic stroke [@Gill2018]. 
+
+Sysmex haematology analyzers are able to provide additional platelet characteristics, such as immature platelet fraction (IPF)  and immature platelet count (IPC) [@UnayDemirel2018a]. Immature platelets (also known as reticulated platelets) are the youngest platelets in circulation and are detected based on having a greater forward scatter (FSC, an indicator of their size) and a greater side fluorescence (SFL, an indicator of their mRNA content) [@Ibrahim2014]. Higher levels of immature platelets are indicative of enhanced platelet production [@Lev2016a] and these platelets are believed to be more prothrombotic than older circulating platelets, with more dense granule release and increased P-selectin expression [@Ibrahim2014; @Lev2016a; @Bernlochner2015a]. Higher immature platelet count is associated with adverse cardiovascular outcomes in patients with coronary artery disease [@Ibrahim2014] and reduced effectiveness of antiplatelet therapies [@Bernlochner2015a; @Ibrahim2012], suggesting that hyperactive immature platelets may contribute to adverse vascular events. Immature platelets have also been suggested to be less responsive to antiplatelet therapies such as prasugrel in acute coronary syndrome patients [@Bernlochner2015a]. 
+
+As these platelet characteristics provide potential information about platelet hyperactivity and given the increased thrombotic risk seen with adiposity, it is important to assess how adiposity affects platelet properties. Previous studies with modest samples sizes have implemented observational epidemiological methods to explore the effect of BMI on PLT, plateletcrit (PCT) and MPV. There is conflicting observational evidence regarding an association between BMI and PLT [@Furuncuoglu2016; @Han2018a], with some studies suggesting a positive association between BMI and MPV [@Coban2005] and other studies reporting no such association [@Heffron2018]. Furthermore, as there is evidence that immature platelet production is increased in patients with metabolic syndrome and type II diabetes [@Vaduganathan2008a; @Mijovic2015a], it is therefore important to explore whether BMI may be an independent predictor of this trait. It is currently unknown whether the influence of BMI on platelet properties and function are causal and independent of confounding effects.
+
+In this study, we used data from the INTERVAL prospective cohort (N=33388) to explore the association between BMI and platelet traits. We combined observational and Mendelian randomization (MR) approaches to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, we therefore employed MR, using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
+
+```{r Linear-reg-MR, echo = FALSE , fig.cap="Schematic of linear regression and Mendelian randomization analyses. Linear regression assesses the association between BMI (exposure) and platelet traits (outcome), with adjustment for potential confounders. Under the assumptions of Mendelian randomization (MR), the genetic risk score (GRS) for body mass index (BMI) does not associate with confounding variables, and if there is a causal association, the GRS should only associate with platelet outcomes through its association with body mass index.", fig.scap = "Schematic of linear regression and Mendelian randomization analyses"}
+include_graphics(path = "figure/BMI_platelets/obsvMRexample.png", dpi = NA)
+
+```
+
+## Methods
+
+### Study population
+
+INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50 000 participants [@DiAngelantonio2017. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomization within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
+
+The present study was conducted on up to 33 388 European ancestry participants living in the United Kingdom. These were the participants who had genetic data, had basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)). Participants were mostly of European descent.
+
 ```{r INTERVAL-STROBE, echo = FALSE, out.height="80%", out.width="80%", fig.cap="A STROBE diagram outlining participants included in the INTERVAL study (N=33388)."}
 include_graphics(path = "figure/BMI_platelets/STROBE_diagram.pdf", dpi = NA)
 
 ```
 
+### Measurement of BMI and covariables
+Participants self-reported their weight and height using online questionnaires. BMI was derived from their weight in kilograms by the square of their height in metres (kg/m^2^). BMI was rank normal transformed (rntransform() function from “moosefun” package https://github.com/hughesevoanth/moosefun/). Available covariables used in the analysis were age, sex, smoking status (in three categories of never, previous and current) and alcohol consumption (in four categories of rarely, less than once a week, 1-2 times a week and 3-5 times a week or most days). These covariables were chosen due to their plausible associations with both BMI and cardiovascular health [@Bhaskaran2018a], therefore it is important to adjust for these variables in the observational estimates.
+
+### Measurement of platelet traits
+Blood was taken by venipuncture into 3mL EDTA tubes. Platelet parameters were measured using the Sysmex XN-1000 instrument [@Astle2016]. This analyzer provides information on cell counts by using a combination of fluorescence (PLT-F) and impedance (I) flow cytometry. The PLT-F channel used a Fluorocell fluorescent dye (oxazine), whereas the impedance method uses electrical resistance to detect platelets. Platelet indices included in the current study, along with the raw units, are provided in Table \@ref(tab:Platelet-traits). These measurements were pre-adjusted for technical covariates such as time between venipuncture and blood count, as well as instrument drift, seasonal and weekly variation [@Astle2016]. Adjustment was performed with cyclic, thin-plate and P-splines in a generalized additive model (GAM) [@Akbari2020]. Resulting platelet trait values along with their units of measurement are reported in Table \@ref(tab:Platelet-traits). These data were rank normal transformed to normalize the distribution of each trait. Therefore, each platelet index is measured in normalized standard deviation (SD) units.
 
 ```{r Platelet-traits,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -26,10 +58,27 @@ column_spec(2, width = "4cm")   %>%
   landscape()
 ```
 
-```{r Linear-reg-MR, echo = FALSE, out.height="50%", out.width="85%", fig.cap="Schematic of linear regression and Mendelian randomization analyses. A) Linear regression assesses the association between BMI (exposure) and platelet traits (outcome), with adjustment for potential confounders. B) Under the assumptions of Mendelian randomization (MR), the genetic risk score (GRS) for body mass index (BMI) does not associate with confounding variables, and if there is a causal association, the GRS should only associate with platelet outcomes through its association with body mass index.", fig.scap = "Schematic of linear regression and Mendelian randomization analyses"}
-include_graphics(path = "figure/BMI_platelets/obsvMRexample.pdf", dpi = NA)
+### Genetic data and the association of the genetic risk score (GRS) with BMI
+The genotyping of INTERVAL participants was performed using the Affymetrix GeneTitan® Multi-Channel (MC) Instrument. Quality control (QC) was performed as previously described [@Astle2016]. Imputation was implemented using a combined 1000 Genomes phase-3-UK + 10K reference panel using the Practical Byzantine Fault Tolerance (PBFT) algorithm [@Astle2016]. A genetic instrument for BMI was created by using 654 genetic variants available of the 656 variants which were independently associated with BMI (P<5x10-8) in a recent meta-analysis of GWAS of around 700,000 individuals of European descent [@Yengo2018]. Of these individuals, 450,000 were from UK Biobank and 250,000 were from the Genetic Investigation of Anthropometric Traits (GIANT) consortium. The weighted GRS was made using PLINK 2.0 [@Purcell2007a]. The effect alleles and beta coefficients were extracted from the source GWAS. The weighted score was calculated by multiplying the dosage of each effect alleles by its effect estimate, summing these and dividing by the number of SNPs (654). The GRS therefore reflects the average per-SNP effect on BMI per individual. 
 
-```
+### Statistical analysis
+Analyses were performed using R version 3.4.2 [@Team2019a]. To visualize correlation between outcome platelet variables, a correlation matrix was made using the pairwise Pearson correlation coefficients of the rank normal transformed data. A dendrogram was also created to show the hierarchical relationship between platelet traits (https://github.com/hughesevoanth/iPVs), where the height at which variables are joined is set at (1 – Pearson correlation coefficient (r)). To explore observational associations between BMI and platelet traits, linear regression models were used (lm() function from “stats” package). Two regression models were used: firstly, adjusting for age and sex and secondly, additionally adjusting for smoking and alcohol consumption as ordinal variables. The results of the regression reflect the change in platelet traits (in normalized SD units) per normalized SD higher BMI (4.7 kg/m^2^). Only participants with all covariables were included in the linear regression models. The associations between potential covariables with both BMI and platelet traits were also explored using linear regression.
+
+To understand properties of the GRS for BMI, the association between the GRS with both BMI and covariables were explored. The MR analysis was performed by using a two-stage least squares (2SLS) regression model (using systemfit() function from “systemfit” package [@Henningsen2007]). The MR causal estimates reflect the change in platelet traits (in SD units) per SD increase in BMI. A Wu-Hausman test was performed to test for endogeneity between observational and MR estimates. Exact beta coefficients, confidence intervals and P values are provided throughout and guide strength of association.
+
+### Follow-up analysis to explore the association between immature platelets and aggregation
+Motivated by findings from the primary analyses described above, additional observational analyses were conducted using data from the COagulation and Platelet laboratory Testing in Cardiac Surgery (COPTIC) study. The COPTIC study was an observational, single centre cohort study of adults undergoing cardiac surgery at the Bristol Heart Institute with primary objective of examining the relationship between coagulation laboratory parameters and bleeding outcomes after surgery in 2,541 participants [@Mumford2017]. This study was approved by the UK NHS Research Ethics Committee (09/H0104/53).
+
+### COPTIC study variables
+Age and sex were reported at baseline. Height and weight were obtained from medical notes. BMI was derived from weight and height (kg/m^2^). Smoking was reported as a categorical variable (0=never smoker, 1=ex-smoker for > 5 years, 2=ex-smoker for 1-5 years, 3=ex-smoker for 30 days-1 year, 4=current smoker). Platelet variables (PLT, MPV, IPF, IPC) were measured using the Sysmex XE-2100 Automated Haematology System (Oxford, UK). Blood samples were taken pre-operatively into 3.2% sodium citrate vacutainers (BD Biosciences, Milton Keynes, UK). Platelet aggregation was measured using Multiplate multiple electrode aggregometry (MEA) (Roche, Rotkreuz, Switzerland), which detects change in electrical impedance when platelets aggregate on metal electrodes. Aggregation was determined by the area under the curve (AUC) in response to platelet agonists including adrenaline (100 mg/mL), thrombin receptor activator peptide 6 test (TRAP-test), ADP-test and arachidonic acid (ASPI-test). Use of a combination of agonists therefore reflects activation of platelets via different pathways: adrenaline acts at the α2 adrenergic receptor, TRAP-6 acts at the protease-activated receptor-1 (PAR-1), ADP acts at the P2Y12 receptor and arachidonic acid at the Thromboxane A2 (TxA2) receptor.
+
+### COPTIC statistical analysis
+The COPTIC dataset in the current analysis included 2,518 participants (23 out of 2,541 participants did not consent for future research). For the current study, only those who were not on antiplatelet therapies (prasugrel, clopidogrel or aspirin) were included (N=655). Extreme outliers that were ± 5 SDs from the mean were removed, and exposures and outcomes were rank normal transformed. Linear regression was used to explore the association between immature platelet count and aggregation, adjusting for age, sex and smoking status.
+
+## Results
+
+### INTERVAL participant characteristics 
+Of INTERVAL participants included in the current study (N=33,388), 50.2 % were female. The mean age was 45.3 years (SD of 14.2 years, Table \@ref(tab:INT-participants-platelets)). The mean BMI was 26.4 kg/m2 (SD of 4.7 kg/m2). The majority of participants were never smokers (58.9 %), with 33.3% and 7.8 % reported as previous and current smokers, respectively. Nearly a third (32.7 %) of participants reported drinking alcohol at least three times a week. 
 
 ```{r INT-participants-platelets,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -46,10 +95,17 @@ mytable %>% kable(caption = "Characteristics of included INTERVAL participants",
 column_spec(1, width = "8cm")
 ```
 
+### Correlation between platelet traits in INTERVAL
+The Sysmex XN-1000 haematology analyzer measures multiple platelet traits, however many of these traits are closely related measurements and therefore may not be completely independent. Indeed, platelet traits showed a high degree of correlation with each other (Figure \@ref(fig:Corr-mat-dend)), in particular among similar measures. For example, measures of PLT (PLT I/F) and PCT, the latter a measurement of platelet mass, were highly positively correlated with each other but were weakly inversely correlated with other platelet measures. Measures of platelet maturity (IPF, IPC, H-IPF) were highly correlated with each other. In addition, platelet size variables (MPV, P-LCR and PDW) showed strong positive correlations with each other as well as with measures of immature platelets. 
+
+
 ```{r Corr-mat-dend, echo = FALSE, out.height="50%", out.width="85%", fig.cap="Correlation matrix and dendrogram of the relationship between platelet traits. A) Correlation coefficients are provided within the matrix. Dark blue indicates a correlation coefficient (r) of 1, with dark red indicating a correlation coefficient of -1. B) A dendrogram showing the hierarchical relationship between platelet traits, where the height at which two platelet traits join is (1 – Pearson correlation coefficient (r)). PCT = plateletcrit, PLT (F) = platelet count (PLT-F channel), PLT (I) = platelet count (impedance channel), SSC = side scatter, SFL = side fluorescence, FSC = side scatter, IPC = immature platelet count, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, MPV = mean platelet volume, P-LCR = platelet large cell ratio, PDW = platelet distribution width. Dashed red lines indicate a height of 0.2, 0.3 and 0.4.", fig.scap= "Correlation matrix and dendrogram of the relationship between platelet traits."}
 include_graphics(path = "figure/BMI_platelets/Corrmatrix_dendrogram.pdf", dpi = NA)
 
 ```
+
+### Observational associations between BMI and platelet traits in INTERVAL
+Linear regression was performed to determine whether a higher BMI was associated with a change in platelet characteristics. In the confounder adjusted linear regression (Table \@ref(tab:BMI-platelets-adjust)), BMI was positively associated with PCT (0.12 SD higher per SD higher BMI, 95% CI 0.11 to 0.13, P = 9.2 x 10^-88^) and platelet count (PLT (I) 0.11 SD higher per SD higher BMI, 95% CI 0.09 to 0.12, P = 1.0 x 10^-67^). The next strongest association with BMI was the association with SFL (0.06 SD higher per SD increase in BMI, 95% CI 0.05 to 0.07, P = 4.7x10^-23^). BMI also showed a positive association with IPC (0.06 SD higher per SD increase in BMI, 95% CI 0.05 to 0.08, P = 4.8x10^-22^). These results demonstrate that BMI is positively associated with PCT, PLT (I), SFL and IPC in this population. These estimates were very similar to the age and sex only adjusted estimates (Table \@ref(tab:BMI-platelets-unadjust)).
 
 ```{r BMI-platelets-adjust,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -93,6 +149,9 @@ mytable %>% kable(caption = "Age and sex adjusted estimates for the association 
   landscape()
 ```
 
+### Associations of covariables with BMI and platelet traits in INTERVAL
+The association of covariables (age, sex, smoking and alcohol) with BMI were evaluated. Included covariables in the analysis showed associations with BMI (Table \@ref(tab:INT-confounders-BMI-platelets)). Males had a higher BMI than females (0.18 SD, 95% CI 0.16 to 0.21, P = 9.64x10^-64^). Age was positively associated with BMI (0.011 SD higher per year older, 95% CI 0.010 to 0.012, P = 1.11x10^-182^). Alcohol showed an inverse association with BMI and smoking showed a weak positive association with BMI. 
+Higher age was generally inversely associated with platelet measures (Table \@ref(tab:age-platelets)). Males had a lower platelet count and plateletcrit compared to females (PLT-F was 0.57 lower 95% CI -0.60 to -0.55, P = 9.9x10^-324^, Table \@ref(tab:sex-platelets)). Weak associations were detected between smoking and platelet traits such as a positive association between smoking status and immature platelets (Table \@ref(tab:smoking-platelets)). Higher alcohol consumption also showed inverse associations with measures of plateletcrit and platelet count (Table \@ref(tab:alcohol-platelets)).
 
 ```{r INT-confounders-BMI-platelets,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -115,6 +174,7 @@ column_spec(1, width = "5cm")   %>%
   column_spec(3, width = "3cm")   %>%
   landscape()
 ```
+
 
 ```{r age-platelets,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -200,6 +260,9 @@ mytable %>% kable(caption = "Association between alcohol consumption and platele
   column_spec(1, width = "6cm")   %>%
   landscape()
 ```
+
+### GRS for BMI associations with BMI and covariables
+To estimate the causal effect of BMI on platelet characteristics, MR was performed. The GRS for BMI (the average per SNP effect on BMI) showed a normal distribution (mean 0.08, SD 0.30, range -1.15 to 1.34) and was positively associated with BMI to the degree expected (R^2^ = 0.042, P = 2.3x10^-312^, F=1458, Table \@ref(tab:INT-GRS-confounders-platelets)). The GRS did not associate with sex, however weak associations were detected with alcohol consumption, age, and smoking status. The amount of variance explained by the GRS for BMI on any covariable included did not exceed R^2^ = 0.002 (Table \@ref(tab:INT-GRS-confounders-platelets)). As the GRS associates with BMI but does not strongly associate with the measured covariables, it is thus likely a valid instrument to perform MR.
  
 ```{r INT-GRS-confounders-platelets,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -218,7 +281,11 @@ mytable %>% kable(caption = "Association between genetic risk score for BMI with
 column_spec(1, width = "5cm")   %>%
   landscape()
 ```
- 
+
+### Mendelian randomization estimates for the association between BMI and platelet traits
+In the MR analyses, BMI was associated with fewer traits than in the observational analysis (Table \@ref(tab:BMI-platelets-MR), \@ref(fig:BMI-platelet-forest)). The causal estimate for the effect of BMI on SFL was 0.08 SDs per SD increase in BMI (95% CI 0.03 to 0.14, P = 0.003). This estimate was of larger magnitude than the observational estimate. The causal estimate for BMI and IPC was 0.06 SDs per SD increase in BMI (95% CI 0.006 to 0.12, P = 0.03), a similar magnitude of effect to the observational estimate. In the MR analysis, unlike in the observational analysis, the causal estimate did not suggest an effect of BMI on either PCT or PLT. MR estimates did not provide evidence for associations between BMI and other platelet variables. The point estimates were consistently positive, aligning with the positive observational associations seen across the platelet traits. Across all but one (H-IPF) of the platelet phenotypes we did not observe differences in directionality of effect comparing observational effects and causal effects predicted by Mendelian randomization (Figure \@ref(fig:BMI-platelet-forest)).
+The Wu-Hausman test suggested that observational and MR estimates were similar for the majority of platelet traits (P > 0.05), except for measures of platelet count and plateletcrit (P < 0.001) (Table \@ref(tab:BMI-platelets-MR)). 
+
 ```{r BMI-platelets-MR,  echo=FALSE}
 options(knitr.kable.NA = "")
 FullName <- c('Side fluorescence','Immature platelet count' ,'Forward scatter','Plateletcrit','Immature platelet fraction','Platelet count (impedence channel)','Platelet large cell ratio','Platelet distribution width' ,'Mean platelet volume','Platelet count (PLT-F channel)','Side scatter','High fluorescence immature platelet fraction')
@@ -249,6 +316,12 @@ include_graphics(path = "figure/BMI_platelets/BMI_platelet_forestplot.pdf", dpi 
 
 ```
 
+### Follow-up associations between IPC and whole blood aggregation in COPTIC
+Given evidence for a causal effect of BMI on IPC in the MR analysis, we sought to evaluate the relationship between IPC and platelet activity as a biological parameter of clinical relevance. Whilst this analysis could not be conducted in INTERVAL due to a lack of suitable data, we were able to utilize data from the COPTIC study to address this question. The COPTIC study is a cohort of cardiac surgery patients, with samples taken pre-surgery. These participants have whole blood aggregation measured, therefore making it possible to determine associations between IPC and aggregation in a clinical setting.
+
+### COPTIC participant characteristics
+The total number of COPTIC participants was 2,541. Of these, 2,518 participants gave consent for future research (Table \@ref(tab:COPTIC-participants-platelets)). Participants included in the analysis were those not on antiplatelet therapy (N=655). The majority of participants were male (61.8%), with a mean age of 63.9 years (SD of 16.1). Similar to the INTERVAL cohort, the mean BMI was in the overweight category (27.2 kg/m^2^ with a SD of 4.9 kg/m^2^). The majority of participants were either never smokers or ex-smokers for more than 5 years (89.2 %).
+
 ```{r COPTIC-participants-platelets,  echo=FALSE}
 options(knitr.kable.NA = "")
 f = c("Age", "Sex", "Female", "Male", "Body mass index (kg/m2)", "Smoking", "Never", "Ex-smoker (>5 years)", "Ex-smoker (1-5 years)", "Ex-smoker (30 days to 1 year)", "Current smoker", "Antiplatelet medications", "0", "1", "2", "3", 'ADP aggregation (AU)','Adrenaline aggregation (AU)','Arachidonic acid aggregation (AU)','TRAP-6 aggregation (AU)','Platelet count (x 109/L)','Mean platelet volume (fL)','Immature platelet fraction (%)','Immature platelet count (x 109/L)')
@@ -266,6 +339,11 @@ mytable %>% kable(caption = "Characteristics of COPTIC study participants", book
 column_spec(1, width = "8cm")
 ```
 
+### Association between IPC and aggregation in COPTIC cohort
+
+To determine the potential functional effects of variation in IPC, the COPTIC cohort was used to assess the observational association between IPC and whole blood platelet aggregation in response to a range of platelet agonists (Figure \@ref(fig:IPC-aggregation)A). In participants who were not on antiplatelet therapy (up to N=655), there was evidence for a positive association between IPC and aggregation induced by adrenaline (0.13 SD increase per SD increase in IPC, 95% CI 0.04 to 0.21, p=3.7x10-3), TRAP-6 (0.11 SD increase per SD increase in IPC, 95% 0.03 to 0.18, p=7.8x10-3) and ADP (0.08 SD per SD increase in IPC, 95% 0.01 to 0.0.15, p=0.04). As there was a high correlation among platelet traits (Figure \@ref(fig:IPC-aggregation)A, Figure \@ref(fig:IPC-aggregation)B), the effect of MPV, PLT and IPF were also assessed. PLT was associated with all four measures of aggregation, with a larger effect estimate than IPC (Figure \@ref(fig:IPC-aggregation)A). The finding that IPC does not correlate with PLT however suggests that the effect of IPC on platelet aggregation is independent of the effect of PLT on platelet aggregation (Figure \@ref(fig:IPC-aggregation)B). Fitting PLT alongside IPC as an additional predictor of aggregation had little effect on the IPC effect estimate providing further evidence of independent contributions from the two traits (Figure \@ref(fig:IPC-aggregation)C). Adjustment for PLT in the regression model for the association between IPF and aggregation provided estimates of a similar magnitude to that of IPC and aggregation.
+
+
 ```{r IPC-aggregation, echo = FALSE, out.height="70%", out.width="85%", fig.cap="Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants. A) Forest plot displaying the association between platelet measures (exposure) and aggregation (outcomes). B) Correlation matrix displaying the Pearson’s correlation coefficient (r) between platelet traits. C) Forest plot displaying the effect estimate for the association between immature platelet count (IPC) or immature platelet fraction (IPF) and measures of aggregation, with or without adjustment for platelet count (PLT). ADP = adenosine diphosphate, AA = arachidonic acid, MPV = mean platelet volume.", fig.scap = "Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants"}
 include_graphics(path = "figure/BMI_platelets/IPC_aggregation.pdf", dpi = NA)
 
@@ -275,3 +353,21 @@ include_graphics(path = "figure/BMI_platelets/IPC_aggregation.pdf", dpi = NA)
 include_graphics(path = "figure/BMI_platelets/Visual_abstract.pdf", dpi = NA)
 
 ```
+
+## Discussion
+
+In this study we used data from 33,388 healthy blood donors to study the effect of BMI on platelet phenotypes including measures of count, size and maturity. The combination of observational and MR estimates suggested a positive causal effect of BMI on SFL and IPC. The observational analysis revealed a strong association between BMI and both PLT and PCT, however the MR estimates did not provide evidence to support this association as causal. Observational analysis using data from a cardiac surgery cohort provided evidence for a positive association between IPC and aggregation induced by adrenaline, TRAP6 and ADP.
+
+The observational and MR analyses in the current study provide evidence for a positive association between BMI and both IPC and SFL. As IPC is derived using SFL, the measure of mRNA content, these measures are highly correlated. Whilst few studies have explored the direct association between BMI and immature platelet measures, there is some evidence for increased immature platelets in subjects with metabolic syndrome (MS) and subjects with type II diabetes compared with control subjects [@Vaduganathan2008a; @Mijovic2015a]. In these studies, participants with MS or type II diabetes also had a higher BMI, which could be a possible cause of this increase in immature platelets. Indeed, evidence from our analysis suggests that BMI, independent of metabolic syndrome or type II diabetes, may causally influence IPC and SFL.
+
+As IPC is an indirect measure of platelet production [@Lev2016a], these results suggest that an increased BMI may lead to an increased production of platelets. It has been reported that immature platelets have increased thrombotic potential [@Lev2016a; @Grove2011a] and may be predictive of cardiovascular events [@Ibrahim2014; @Freynhofer2017a], suggesting that an increase in the number of immature platelets may be of functional and clinical relevance. A follow-up analysis confirmed that higher IPC was associated with greater platelet aggregation independent of absolute platelet count within a cardiac surgery cohort. Positive associations were found between IPC and aggregation induced by adrenaline, TRAP-6 and ADP, suggesting general platelet hyperactivity with more immature platelets. A previous study in a coronary artery disease cohort also found a positive correlation between IPC and aggregation induced by arachidonic acid, collagen and ADP [@Grove2011a]. These findings suggest that IPC can be used as a proxy for platelet hyperactivity within a cohort with a history of cardiovascular disease. Measures of immature platelets are currently not considered in the clinic when prescribing antiplatelet therapy, however if a higher immature platelet count is demonstrative of newly produced, hyperactive platelets then this could be important in guiding dosage regimes to ensure sufficient platelet inhibition [@Bernlochner2015a]. Observational studies have also found that patients with COVID-19 have elevated immature platelet counts and fraction, which could partly explain high rates COVID-19 induced thrombosis [@Cohen2020, @Klok2020]. Despite the association between BMI and IPC, there was less evidence for an effect of BMI on IPF. This lack of association may be because IPF is the proportion of immature platelets, therefore if someone had a higher number of immature platelets, but also a higher number of platelets overall (for example due to increased platelet lifespan), there would be no increase in the immature platelet fraction.
+
+In general, previous studies have reported positive observational associations between BMI and both PLT and PCT [@Furuncuoglu2016]. More direct measures of body fat such as total fat mass, waist-hip ratio and waist circumference have also been reported to be positively associated with both PLT and PCT [@Han2018a]; the observational evidence from the current study is in agreement with this. The MR analysis did not detect causal effects of BMI on measures of PLT/PCT, however the estimates were consistently positive. It is possible that IPC could be raised in absence of raised PLT as platelets may being produced at an increased rate, but could also be being destroyed at an increased rate. The small P values in the Wu-Hausman test for endogeneity for plateletcrit and platelet count variables support that the observational and MR estimates are different. Estimates could be biased due to confounding factors, reverse causation or other sources of bias. Possible routes of confounding could include stress, inflammation and nutrition, which could exert independent effects on both BMI and platelet count. 
+
+Both observational and MR estimates suggested that BMI is not associated with measures of platelet size, such as MPV and P-LCR. There are conflicting findings in the literature, with some studies suggesting that there is a positive association between BMI and MPV [@Coban2005] and others showing no association [@Furuncuoglu2016; @Han2018a; @Heffron2018]. The results of the current study suggest that associations seen previously between BMI and MPV are likely due to confounding of observational estimates. The lack of association between BMI and MPV may be surprising given a correlation coefficient of 0.62 between IPC and MPV.  As BMI was positively associated with immature platelet count, and immature platelets tend to be larger, it may be surprising that BMI was not associated with measures of platelet size. However, immature platelets make up a small percentage of overall platelets (~3-6 %) [@Ibrahim2014; @Bernlochner2015a], therefore the increase in immature platelets may not affect the overall median size of the whole platelet population.
+
+Although this study suggests potential effects of BMI on platelet traits such as SFL and IPC, it does not provide mechanistic insight into how BMI exerts these effects. Previous studies have suggested that inflammation driven by adiposity can stimulate megakaryocyte proliferation, thereby increasing platelet numbers [@Han2018a]. There is evidence that inflammatory mediators such as interleukin-6 (IL-6) could be one such factor [@Kaser2001]. Further study would be warranted to explore these mechanisms, as well as replicate the current findings, such as through independent population or clinical studies. 
+
+There are a few limitations to the study that should be recognised. Firstly, BMI was derived from self-reported height and weight. Although there is potential for this to bias observations, previous studies have found that self-reported BMI and BMI measured in the clinic are strongly associated [@Nikolaou2017]. The GRS also associates with BMI to the extent expected. Secondly, there may be other confounders which were not recorded within INTERVAL and therefore could not be accounted for in our models, such as, socio-economic position, which may affect both BMI and risk of thrombosis. Therefore, residual confounding of observational estimates cannot be ruled out. With respect to the observational analysis conducted in COPTIC, the sample size is modest, which may limit power to detect associations. Furthermore, this cohort required cardiac surgery and therefore it is possible that associations found may not be generalizable to the wider population,  as participants also displayed greater aggregatory responses than the reference ranges [@Marcucci2015].  However, these findings do indicate that immature platelets may be a biomarker of platelet hyperactivity in patients with a history of cardiovascular disease. It is important to note that the anticoagulant used (EDTA) has been reported to affect platelet parameters, such as increasing MPV and decreasing PLT [@Mannuß2020]. Despite this, EDTA is the standard anticoagulant used for full blood counts in the NHS. The Sysmex analyzers used in INTERVAL and COPTIC were different models, however, it has been shown that there is strong association between platelet measures between the XE and newer XN analyzers [@Briggs2012].
+
+Altogether, we show observational and MR evidence that an increased BMI is associated with an increase in number of immature platelets. Observational evidence indicates that higher immature platelet count is associated with enhanced aggregation in a cardiac surgery cohort. Together, these results indicate that higher BMI may enhance platelet function and thrombosis by increasing platelet production and immature platelet count. 
